# codegen

./: Cargo.toml
src/: main.rs
src/codegen/: dma.rs  gpio.rs  mod.rs
src/cubemx/: families.rs  mcu.rs  mod.rs
src/cubemx/ip/: dma.rs  gpio.rs  mod.rs
