[package]
name = "codegen"
version = "0.1.0"
publish = false
authors = ["Jan Teske <jteske@posteo.net>"]
edition = "2018"

[dependencies]
anyhow = "1"
once_cell = "1"
regex = "1"
serde-xml-rs = "0.4"
convert_case = "0.6.0"
text_io = "0.1.12"
lazy-regex = "2.5.0"
spreadsheet-ods = "0.22"
icu_locid = "*"

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]
